Remove and replace the restart button with the text counter, add and style icons to the quiz box

--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
      <section>
         <div class="quiz_box">
 
+            <div class="quiz_icons">
+                <div class="refresh"><i class="fas fa-redo-alt"></i></div>
+                <div class="leave"><i class="fas fa-times"></i></div>
+            </div>
             <div class="quiz_top">
-                <div class="total_question">
-                    <!--<span><p>2</p>of<p>5</p>Questions</span>-->
-                </div>
                 <!--==========Timer==========-->
                 <div class="timer">
                     <div class="time_text">Time Left</div>
@@ -108,8 +109,10 @@
             </div>
 
             <!--==========Next and Restart button-->
-            <div class="buttons">
-                <button class="restart">Restart</button>
+            <div class="bottom">
+                <div class="total_question">
+                    <!--<span><p>2</p>of<p>5</p>Questions</span>-->
+                </div>
                 <button class="next_btn">Next</button>
             </div>
         </div>
