Fix positioning error to feedback box

--- a/help.html
+++ b/help.html
@@ -48,7 +48,7 @@
                 <br>
                 <ol>
                     <li>Follow instructions</li>
-                    <li class="link">Click on <span>Start Quiz</span></li>
+                    <li>Click on <span  class="link">Start Quiz</span></li>
                     <li>And start playing!!!</li>
                 </ol>
             </div>
