--- a/help.html
+++ b/help.html
@@ -30,9 +30,6 @@
                     <a href="index.html">Home</a>
                 </li>
                 <li>
-                    <a href="quiz.html">Quiz</a>
-                </li>
-                <li>
                     <a href="help.html"  class="active">Help</a>
                 </li>
              </ul>
@@ -92,9 +89,19 @@
                 </div>
                 </form>
             </div>
-            
+    </section>
 
+    <!--==========THANK YOU MESSAGE AFTER SUBMITTING THE FORM==========-->
+    <section>
+        <div class="submitBox">
+            <div  class="submitIcon"><i class="far fa-laugh-beam"></i></div>
+            <div>
+                <p>Thank you for your message and your interest in Love vegetables! We will get back to you very soon.</p>
+                <br><br>
+                <p class="welcome">Welcome to the community of vegetable lovers!</p>
+            </div>
         
+        </div>
     </section>
 
     <!--==========FOOTER==========-->
