--- a/help.html
+++ b/help.html
@@ -27,7 +27,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html">HomeQuiz</a>
                 </li>
                 <li>
                     <a href="help.html"  class="active">Help</a>
