--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="index.html" class="active">HomeQuiz</a>
                 </li>
                 <li>
                     <a href="help.html">Help</a>
