Add a favicon into index file

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
  
+    <!--==========Favicon==========-->
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
     <!--==========Link to Style CSS file==========-->
     <link rel="stylesheet" href="assets/css/style.css">
