Add meta data description and keywords

--- a/help.html
+++ b/help.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!--==========Font Awesome for icons==========-->
+    <!--==========SEO Data==========-->
+    <meta name="description" content="A fun and interactive quiz to test the knowledge of vegetables lovers">
+    <meta name="keywords" content="quiz, game, vegetables, multiple-choice, questions, vegetables quiz, online quiz, love vegetables">
+
+     <!--==========Font Awesome CDN import to allow usage of icons==========-->
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
  
