Change the style of header and add a hamburger menu for responsiveness

--- a/help.html
+++ b/help.html
@@ -22,22 +22,21 @@
     <!--==========HEADER==========-->
     <header id="header">
    
-        <!--==========Logo==========-->
-        <a href="index.html">
-            <h1 id="logo">Love Vegetables</h1>
-        </a>
-
-        <!--==========Navigation Links==========-->
-        <nav>
-            <ul id="menu">
-                <li>
-                    <a href="index.html">HomeQuiz</a>
-                </li>
-                <li>
-                    <a href="help.html"  class="active">Help</a>
-                </li>
-             </ul>
-        </nav>
+       <!--==========Logo and Navigation Links==========-->
+       <nav>
+        <div id="logo">
+            <a href="index.html">Love Vegetables</a>
+        </div>
+        <div id="openMenu"><i class="fa fa-bars"></i></div>
+        <ul id="menu">
+            <li>
+                <a href="index.html">HomeQuiz</a>
+            </li>
+            <li>
+                <a href="help.html" class="active">Help</a>
+            </li>
+         </ul>
+    </nav>
     </header>
 
     <section id="help_area">
