--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 <body>
     <!--==========HEADER==========-->
     <header id="header">
-   
-        <!--==========Logo==========-->
-        <a href="index.html">
-            <h1 id="logo">Love Vegetables</h1>
-        </a>
 
-        <!--==========Navigation Links==========-->
+        <!--==========Logo and Navigation Links==========-->
         <nav>
+            <div id="logo">
+                <a href="index.html">Love Vegetables</a>
+            </div>
+            <div id="openMenu"><i class="fa fa-bars"></i></div>
             <ul id="menu">
                 <li>
                     <a href="index.html" class="active">HomeQuiz</a>
