--- a/help.html
+++ b/help.html
@@ -110,5 +110,6 @@
     <!--==========Link to JavaScript file==========-->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/questions.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 </html>
