--- a/index.html
+++ b/index.html
@@ -171,5 +171,6 @@
     <!--==========Link to JavaScript file==========-->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/questions.js"></script>
+    <script src="assets/js/header.js"></script>
 </body>
 </html>
