--- a/message.html
+++ b/message.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-     <!--==========Font Awesome for icons==========-->
+    <!--==========SEO Data==========-->
+    <meta name="description" content="A fun and interactive quiz to test the knowledge of vegetables lovers">
+    <meta name="keywords" content="quiz, game, vegetables, multiple-choice, questions, vegetables quiz, online quiz, love vegetables">
+
+     <!--==========Font Awesome CDN import to allow usage of icons==========-->
      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" 
      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
  
@@ -18,21 +22,20 @@
     <!--==========HEADER==========-->
     <header id="header">
    
-        <!--==========Logo==========-->
-        <a href="index.html">
-            <h1 id="logo">Love Vegetables</h1>
-        </a>
-
-        <!--==========Navigation Links==========-->
+        <!--==========Logo and Navigation Links==========-->
         <nav>
+            <div id="logo">
+                <a href="index.html">Love Vegetables</a>
+            </div>
+            <div id="openMenu"><i class="fa fa-bars"></i></div>
             <ul id="menu">
                 <li>
                     <a href="index.html">HomeQuiz</a>
                 </li>
                 <li>
-                    <a href="help.html"  class="active">Help</a>
+                    <a href="help.html" class="active">Help</a>
                 </li>
-             </ul>
+            </ul>
         </nav>
     </header>
 
